generated-tests/tests/snapshots/rust/rust__test_generated_reference_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let source2 = 42; let var7: &i32 = &source2;

AST:
(source_file
  (let_declaration
    (identifier source2)
    (integer_literal)
  )
  (let_declaration
    (identifier var7)
    (reference_type
      (primitive_type)
    )
    (reference_expression
      (identifier source2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "source2",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "var7",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
