generated-tests/tests/snapshots/rust/rust__test_generated_slice_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let [x13, ..] = [1, 2, 3];

AST:
(source_file
  (let_declaration
    (slice_pattern
      (identifier x13)
      (remaining_field_pattern)
    )
    (array_expression
      (integer_literal)
      (integer_literal)
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x13",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
